# pyC2Ray

./: meson.build  pyproject.toml
.github/workflows/: lint.yml
examples/paper_tests/raytracing_benchmark/: parameters.yml
examples/paper_tests/test1_Ifront/: parameters.yml  run_test.py
examples/paper_tests/test2_Ifront_cosmo/: parameters.yml  run_test.py
examples/paper_tests/test3_multisource/: run_test.py
examples/paper_tests/test4_shadow/: parameters.yml  shadow.py
examples/paper_tests/test5_domain_decomposition/: sources_grouping_demo.py
examples/pasc_2026_submission/: test_asora.py
pyc2ray/: asora_core.py  c2ray_244paper.py  c2ray_base.py  c2ray_cubep3m.py  c2ray_fstar.py  c2ray_test.py  c2ray_thesan.py  constants.py  evolve.py  load_extensions.py  meson.build  parameters.py  raytracing.py  sinks_model.py  source_model.py
pyc2ray/depr/: evolve_old.py
pyc2ray/lib/: libasora.pyi  libc2ray.pyi
pyc2ray/radiation/: blackbody.py  spectra.py
pyc2ray/solver/: chemistry.py  hydrogen.py
pyc2ray/tables/multifreq/: cross_section_index.py
pyc2ray/utils/: __init__.py  domain_decomposition_utils.py  logutils.py  other_utils.py  source_converter.py  sourceutils.py
scripts/: batch_size_estimate.py
src/asora/: chemistry.cu  chemistry.h  memory.cpp  memory.cu  memory.cuh  memory.h  meson.build  python_module.cu  python_test_module.cu  rates.cu  rates.cuh  raytracing.cu  raytracing.cuh  tests.cu  tests.cuh  utils.cu  utils.cuh
src/asora_he/: Makefile_He  memory.cu  memory_He.cu  meson.build  python_module.cpp  python_module.cu  python_module_He.cu  rates.cu  rates.cuh  raytracing.cu  raytracing.cuh  raytracing_He.cu  raytracing_He.cuh  utils.cu  utils.cuh
src/friedrich/: chem_utils.f90  chemistry_he.f90  thermalevolution.f90
tests/: conftest.py  test_asora.py  test_asora_core.py  test_asora_he.py  test_asora_internal.py  test_c2ray.py  test_constants.py  test_evolve.py  test_logger.py  test_other_utils.py  test_parameters.py
tests/data/: cell_interpolator_output.npy  cinterp_output.npz  ionized_fraction_average.npy  parameters.yml
